# ViewR

./: CODEOWNERS  LICENSE  README.md  meson.build
data/: assets.gresource.xml  gschema.xml
src/: Application.vala  Main.vala  Window.vala  meson.build
src/Layouts/: Canvas.vala  MainWindow.vala
src/Layouts/Partials/: Toolbar.vala
src/Managers/: EventManager.vala  FileManager.vala  ImageManager.vala
src/Services/: EventBus.vala
src/Utils/: Rectangle.vala
src/Widgets/: ToolbarButton.vala
