src = files([
  'Main.vala',
  'Application.vala',
  'Window.vala',

  'Layouts/Partials/Toolbar.vala',

  'Layouts/Canvas.vala',
  'Layouts/MainWindow.vala',

  'Widgets/ToolbarButton.vala',

  'Services/EventBus.vala',

  'Managers/FileManager.vala',
  'Managers/ImageManager.vala',

  'Utils/Rectangle.vala'
])